# NexGenIQ

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  main.py  nixpacks.toml  railway.json
backend/: .env.example  railway.json  requirements.txt
docs/: DEPLOYMENT.md  Phase1_Domain_Knowledge_Genetics_and_Selection_Theory.docx  Phase2_iGenDec_and_Comparable_Software_Research.docx  Phase3-5_NexGenIQ_UIUX_Design_Specification.docx  Phase3_Architecture_and_Technical_Build_Plan.docx  VALIDATION.md
engine/: README.md  pyproject.toml
engine/osit_index/: PHENOTYPE_METHOD.md  __init__.py  adjustment.py  animal.py  dataloader.py  econ_estimator.py  explain.py  goal.py  index.py  interpret.py  library.py  parameters.py  phenotype.py  sensitivity.py  traits.py  validation.py
engine/osit_index/data/: METHODS_genetic_parameters.md  PARAMETER_SOURCES.md  README.md  across_breed_factors_2024.json  across_breed_factors_2026.json  genetic_parameters.json
engine/pytest-cache-files-jc0nhrol/v/cache/: nodeids
engine/tests/: conftest.py  test_accuracy.py  test_adjustment.py  test_build_index.py  test_dataloader.py  test_econ_estimator.py  test_interpret.py  test_pap_and_repair.py  test_phenotype.py  test_sensitivity_explain.py  test_solver.py  test_validation.py  test_validation_reference.py
frontend/: .env.example  README.md  index.html  package-lock.json  (+4 more)
sim/: README.md  pyproject.toml
sim/osit_sim/: __init__.py  economics.py  genetics.py  herd.py  inputs.py  interpret.py  mev.py
sim/tests/: conftest.py  test_interpret.py  test_mev.py  test_simulation.py
(+60 files in other folders)
